fix: Cut off book title in mobile header

--- a/packages/seed-bible/seed-bible/app/main.css
+++ b/packages/seed-bible/seed-bible/app/main.css
@@ -848,7 +848,6 @@ h6 {
   font-family: var(--text-bookTitle-font);
   color: var(--sb-book-title-font-color);
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 
